name:                PCF
version:             0.1.0.0
synopsis:            A Haskell implementation of Programming Computable
                     Functions (PCF) extended with Bool.
description:         A Haskell implementation of Programming Computable
                     Functions (PCF) extended with Bool.
homepage:            https://github.com/githubuser/PCF#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Bagnall
maintainer:          cs.ohio.edu/~abagnall
copyright:           2017 Alexander Bagnall
category:            Programming Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Context Ast Core Lexer Parser Tycheck Eval Interp
                       Preprocessor
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , array
                     , parsec
  default-language:    Haskell2010

executable PCF-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PCF
                     , array
                     , parsec
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

test-suite PCF-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PCF
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/PCF